Fixed url for developer.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
             <id>ZenHarbinger</id>
             <name>Matthew Aguirre</name>
             <email>matt.aguirre@gmail.com</email>
-            <url>http://www.example.com/jdoe</url>
+            <url>https://github.com/ZenHarbinger/</url>
             <organization>tros</organization>
             <organizationUrl>http://tros.org/</organizationUrl>
             <roles>
